--- a/src/Kanbas/styles.css
+++ b/src/Kanbas/styles.css
@@ -18,3 +18,20 @@ body * {  font-family: Arial, Helvetica, sans-serif;  }
   .border-gray {
     border: 1px solid gray;
 }
+#wd-booty {
+  border: 2px solid grey;
+  border-radius: 5px;
+}
+#butt-nk {
+  border: none;
+  padding: 0;
+  background: none;
+}
+
+li .wd-lesson {
+  border-left: 3px solid green; 
+}
+
+li .wd-ass-li {
+  border-left: 3px solid green; 
+}
